# clap-rpc

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
api/: clapservice.proto  event.proto  events.proto  gui.proto  host.proto  plugin.proto
cmake/: clap_autolink.cmake  clap_symlink.cmake  initialize_proto.cmake  utils.cmake
include/clap-rpc-tools/clap-rpc/tools/: executable.hpp  transportwatcher.hpp
include/clap-rpc/clap-rpc/: global.hpp  mpmcqueue.hpp  server.hpp  stream.hpp  streamhandler.hpp
src/: logging.h  server.cpp  stream.cpp  streamhandler.cpp
src/tools/: executable.cpp  executable.hxx  executable_unix.cpp
tests/: CMakeLists.txt  tst_executable.cpp  tst_server.cpp
